fix: chart layout is normal on default mode and scroll is visible for additional enitity  (#540)
fix: chart layout is normal on default mode and scroll is visible for additional enitity

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -897,7 +897,7 @@
         font-size: 16px !important;
     }
     .additionalItems ul{
-        overflow-y: hidden;
+        overflow-y: auto;
         height: 54px;
         &:hover{
             overflow-y: auto;
